# miavortaro-py

./: .gitignore  README.md  dua_testo.py  miavortaro.py  pyproject.toml  setup.py  unua_testo.py  ŝanĝnoto.md
.github/workflows/: sphinx.yml
docs/: index.html  miavortaro.html
docs/doctrees/: environment.pickle  index.doctree  motoro.doctree  petoj.doctree
docs/html/: genindex.html  index.html  motoro.html  search.html  searchindex.js  usage.html
docs/html/_sources/: index.rst.txt  motoro.rst.txt  usage.rst.txt
docs/source/: conf.py
docs/source/_build/: fadenoj.html  genindex.html  index.html  motoro.html  petoj.html  search.html  searchindex.js  usage.html
docs/source/_build/.doctrees/: environment.pickle  index.doctree  usage.doctree
docs/source/_build/_sources/: usage.rst.txt
docs/source/_build/_static/: documentation_options.js
miavortaro/: __init__.py
source/: fadenoj.rst  index.rst  petoj.rst  usage.rst
testoj/: unua_testo.py
